--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-    <h1>TESTE
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
 
-    </h1>
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 
 </html>
